# rust_grpc_web_prototype

./: .gitignore
frontend/src/: App.tsx
rust_grpc/: Cargo.toml
rust_grpc/src/: client.rs  server.rs
